--- a/index.html
+++ b/index.html
@@ -10,31 +10,30 @@
         <link rel="stylesheet" href="./styles/style.css" />
     </head>
     <body>
-        <header>
+        <header class="header">
             <nav class="header__menu">
                 <ul class="header__links-list">
                     <li class="header__links-list-item_no-bullit">
                         <a class="header__link_active" href="#">главная</a>
                     </li>
                     <li class="header__links-list-item">
-                        <a class="header__link" href="#">посмотреть лоты</a>
+                        <a class="header__link" href="#Look">посмотреть лоты</a>
                     </li>
                     <li class="header__links-list-item">
-                        <a class="header__link" href="#">об аукционе</a>
+                        <a class="header__link" href="#auction">об аукционе</a>
                     </li>
                 </ul>
             </nav>
             <a class="header__logo">
                 <img src="./images/logo-black.svg" alt="Логотип" />
             </a>
-            <div class="address">
-                <a href="tel:+99995555555">+9 999 555 5555</a> <br />
-                <a href="info@sobaka.ge">info@sobaka.ge</a><br />
-                <address>
-                    наб. Принсенграхт 263-<br />
-                    265, Амстердам
-                </address>
-            </div>
+            <address class="header__address">
+                <a href="tel:+99995555555">+9 999 555 5555</a>
+                <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+                <p class="address__text">
+                    наб. Принсенграхт 263- 265, Амстердам
+                </p>
+            </address>
         </header>
         <main>
             <section class="cover">
@@ -46,10 +45,10 @@
                 </h1>
                 <div class="cover__description">
                     <p class="cover__description-text">Аукцион вещей, в которые никто не верил</p>
-                    <button class="bet-button">Сделать ставку</button>
+                    <button type="button" class="bet-button">Сделать ставку</button>
                 </div>
             </section>
-            <section class="lots">
+            <section id="Look" class="lots">
                 <h2 class="lots__heading">Лоты</h2>
                 <ul class="lots__card-list">
                     <li class="lots__card-list-item">
@@ -94,7 +93,7 @@
                         <img src="./images/logo-white.svg" class="about__logo-image" alt="Логотип" />
                     </div>
                 </div>
-                <div class="column__about_text">
+                <div id="auction" class="column__about_text">
                     <h2 class="about__title">Об аукционе</h2>
                     <div class="about__text">
                         <p>
@@ -111,16 +110,17 @@
         </main>
 
         <footer class="footer">
-            <address class="address">
-                <a href="tel:+99995555555">+9 999 555 5555</a> <br />
-                <a href="info@sobaka.ge">info@sobaka.ge</a><br />
-                наб. Принсенграхт 263-<br />
-                265, Амстердам
+            <address class="header__address">
+                <a href="tel:+99995555555">+9 999 555 5555</a>
+                <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+                <p class="address__text">
+                    наб. Принсенграхт 263- 265, Амстердам
+                </p>
             </address>
             <nav class="footer__menu">
                 <ul class="footer__menu-list">
                     <li class="footer__menu-list-item">
-                        <a class="footer__menu-link_active" href="#">главная</a>
+                        <a class="footer__menu-link footer__menu-link_active" href="#">главная</a>
                     </li>
                     <li class="footer__menu-list-item">
                         <a class="footer__menu-link" href="#">посмотреть лоты</a>
